# Practice-On-C

./: CMakeLists.txt
lab1/: CMakeLists.txt
lab1/Task1/: CMakeLists.txt  task1.c
lab1/Task2/: CMakeLists.txt  task2.c
lab1/Task3/: CMakeLists.txt  task3.c
lab1/Task4/: CMakeLists.txt  task4.c
lab1/Task5/: CMakeLists.txt  task5_func.c  task5_main.c
lab1/Task6/: CMakeLists.txt  task6_func.c  task6_main.c
lab1/Task7/: CMakeLists.txt  task7_func.c  task7_main.c
lab1/Task8/: CMakeLists.txt
lab1/Task8/includes/: func.h
lab2/: CMakeLists.txt
lab2/include/: f.h
lab2/src_exe/: CMakeLists.txt  main.c
lab2/src_lib/: CMakeLists.txt  task1.c  task2.c
lab3/: CMakeLists.txt
lab3/include/: head.h
lab3/src_exe/: CMakeLists.txt  main.c
lab3/src_lib_dowhile/: CMakeLists.txt  task1.c  task3.c  task4.c
lab3/src_lib_for/: CMakeLists.txt  func.c  task1.c  task2.c  task3.c  task4.c  task5.c
lab3/src_lib_while/: task1.c  task2.c  task4.c  task5.c
lab4/: CMakeLists.txt
lab4/Task1/: CMakeLists.txt
lab4/Task1/includes/: head.h
lab4/Task1/src_exe/: CMakeLists.txt  main.c
lab4/Task1/src_lib/: CMakeLists.txt  task1.c
lab4/Task2/: CMakeLists.txt
lab5/: CMakeLists.txt
lab5/includes/: head.h
lab5/src_exe/: CMakeLists.txt  main.c
lab5/src_lib/: CMakeLists.txt  delete.c  find.c  insert.c  strcat.c  strcpy.c  strlen.c
lab6/: CMakeLists.txt
lab6/includes/: head.h
lab6/src_exe/: CMakeLists.txt  main.c
lab7/: CMakeLists.txt
lab7/Task2/: CMakeLists.txt
lab7/Task7/: CMakeLists.txt
lab7/Task[1]/: CMakeLists.txt
lab7/Task[3-6]/: CMakeLists.txt
(+32 files in other folders)
